# nodegui-plugin-font-icon

./: CMakeLists.txt  README.md  package.json
.github/workflows/: build.yml  test.yml
scripts/: setupBinary.js
src/: addon.ts  demo.ts  index.ts
src/cpp/: FontIcon.cpp  FontIcon.h  main.cpp
